--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,25 @@ body {
 /* PAGE ACCUEIL */
 .fa-heart {
   font-size: 25px;
+  position: absolute;
+  top: 45px;
+  right: 40px;
+  height: 25px;
+  background: transparent;
+}
+.fa-heart:hover + .fa-heart--full {
+  opacity: 1;
+}
+
+.fa-heart--full {
+  font-size: 25px;
+  position: absolute;
+  top: 45px;
+  right: 40px;
+  height: 25px;
+  color: #9356DC;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
 }
 
 /* PAGE LAPALETTEDUGOUT */
@@ -295,7 +314,7 @@ body {
 .fonction__li:hover {
   background-color: #f2eafb;
 }
-.fonction__li:hover .ico {
+.fonction__li:hover .ico--fonction {
   filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
 }
 .fonction__li__num {
@@ -446,6 +465,7 @@ body {
   position: absolute;
   top: 45px;
   right: 40px;
+  height: 25px;
 }
 .commande__divico__ico {
   height: 25px;
