--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -31,31 +31,9 @@
 /* Icones en ligne Font Awesome */
 
     /* PAGE ACCUEIL */
-    .fa-heart
-    {
-        font-size: 25px; 
-        position: absolute;
-        top: 45px;
-        right: 40px;
-        height: 25px;
-        background: transparent;
-        &:hover + .fa-heart--full
-        {
-            opacity: 1;
-        }
-
-    }
-    .fa-heart--full
-    {
-        font-size: 25px; 
-        position: absolute;
-        top: 45px;
-        right: 40px;
-        height: 25px;
-        color: $primary-color;
-        opacity: 0;
-        transition: opacity 300ms ease-in-out;
-    }
+.fa-heart{
+    font-size: 25px; 
+}
 
     /* PAGE LAPALETTEDUGOUT */
 .fa-arrow-left{
@@ -64,4 +42,29 @@
 
 .fa-check{
     color: $third-color;
+}
+
+
+.heart-index /* Les 2 icones heart-index sont reliés pour la page d'accueil : 
+- à la div resto__bottom__heart du fichier index.scss. La transition est déclenchée au hover de cette div.
+Pour les pages de menu :hover
+- à la div commande__divico du fichier page_menu.scss. La transition est déclenchée au hover de cette div*/
+{
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: grey;
+    transition: opacity 300ms ease-in-out;
+
+}
+
+.heart-index-full
+{
+    color: $primary-color;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0;
+    transition: opacity 300ms ease-in-out;
 }
