--- a/css/main.css
+++ b/css/main.css
@@ -1,614 +1,18 @@
-@charset "UTF-8";
-/* Ne pas oublier d'importer les feuilles dans un ordre à respecter ! Les média queries à la fin !!! */
-/* Variables */
-/* POLICES */
-/* shrikhand-regular - latin */
-@font-face {
-  font-family: "Shrikhand";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/shrikhand-v6-latin-regular.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("/polices/shrikhand-v6-latin-regular.eot?#iefix") format("embedded-opentype"), url("/polices/shrikhand-v6-latin-regular.woff2") format("woff2"), url("/polices/shrikhand-v6-latin-regular.woff") format("woff"), url("/polices/shrikhand-v6-latin-regular.ttf") format("truetype"), url("/polices/shrikhand-v6-latin-regular.svg#Shrikhand") format("svg");
-  /* Legacy iOS */
-}
-/* roboto-100 - latin */
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 100;
-  src: url("/polices/roboto-v27-latin-100.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("/polices/roboto-v27-latin-100.eot?#iefix") format("embedded-opentype"), url("/polices/roboto-v27-latin-100.woff2") format("woff2"), url("/polices/roboto-v27-latin-100.woff") format("woff"), url("/polices/roboto-v27-latin-100.ttf") format("truetype"), url("/polices/roboto-v27-latin-100.svg#Roboto") format("svg");
-  /* Legacy iOS */
-}
-/* roboto-300 - latin */
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 300;
-  src: url("/polices/roboto-v27-latin-300.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("/polices/roboto-v27-latin-300.eot?#iefix") format("embedded-opentype"), url("/polices/roboto-v27-latin-300.woff2") format("woff2"), url("/polices/roboto-v27-latin-300.woff") format("woff"), url("/polices/roboto-v27-latin-300.ttf") format("truetype"), url("/polices/roboto-v27-latin-300.svg#Roboto") format("svg");
-  /* Legacy iOS */
-}
-/* roboto-regular - latin */
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: url("/polices/roboto-v27-latin-regular.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("/polices/roboto-v27-latin-regular.eot?#iefix") format("embedded-opentype"), url("/polices/roboto-v27-latin-regular.woff2") format("woff2"), url("/polices/roboto-v27-latin-regular.woff") format("woff"), url("/polices/roboto-v27-latin-regular.ttf") format("truetype"), url("/polices/roboto-v27-latin-regular.svg#Roboto") format("svg");
-  /* Legacy iOS */
-}
-/* roboto-500 - latin */
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  src: url("/polices/roboto-v27-latin-500.eot");
-  /* IE9 Compat Modes */
-  src: local(""), url("/polices/roboto-v27-latin-500.eot?#iefix") format("embedded-opentype"), url("/polices/roboto-v27-latin-500.woff2") format("woff2"), url("/polices/roboto-v27-latin-500.woff") format("woff"), url("/polices/roboto-v27-latin-500.ttf") format("truetype"), url("/polices/roboto-v27-latin-500.svg#Roboto") format("svg");
-  /* Legacy iOS */
-}
-/* GENERAL */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
-}
+/* Error: expected "{".
+ *    ,
+ * 90 | >>>>>>> Stashed changes
+ *    |                        ^
+ *    '
+ *   scss/utils/_variables.scss 90:24  @import
+ *   scss/main.scss 2:9                root stylesheet */
 
-body {
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  color: black;
-}
-
-/* TITRES ET TEXTES */
-.heading--h1 {
-  font-family: "Shrikhand", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-}
-.heading--h1--explo {
-  text-align: center;
-  padding: 0 30px 15px 30px;
-  font-family: "roboto", Arial, Helvetica, sans-serif;
-}
-.heading--h1--commande {
-  margin-bottom: 30px;
-  font-size: 26px;
-}
-.heading--h2--fonction {
-  margin-bottom: 25px;
-}
-.heading--h2--resto {
-  margin-bottom: 20px;
-}
-.heading--h2--entree {
-  font-size: 17px;
-  text-transform: uppercase;
-  font-weight: 300;
-}
-.heading--h3 {
-  margin-bottom: 6px;
-}
-.heading--h3--commande {
-  font-size: 17px;
-  font-weight: 600;
-}
-
-.text--local {
-  font-size: 1.1em;
-  font-weight: 400;
-}
-.text--search {
-  text-align: center;
-  margin-bottom: 15px;
-  font-size: 18px;
-  font-weight: 200;
-}
-.text--resto {
-  font-size: 1.1em;
-  font-weight: 300;
-}
-.text--nouveau {
-  font-weight: 500;
-  color: #278870;
-  font-size: 0.85em;
-}
-.text--commande {
-  font-size: 14px;
-  font-weight: 300;
-}
-.text--commande--bold {
-  font-size: 15px;
-  font-weight: 500;
-}
-
-/* LISTES */
-.li {
-  list-style-type: none;
-}
-
-.a {
-  color: black;
-  text-decoration: none;
-}
-.a--fonction {
-  font-weight: 500;
-}
-.a--explo {
-  color: white;
-  font-weight: 400;
-}
-.a--footer {
-  font-weight: 300;
-}
-
-.button {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  margin: auto;
-  background: linear-gradient(to top, #9356DC, #FF79DA);
-  border-radius: 25px;
-  padding: 15px;
-  color: white;
-  cursor: pointer;
-  text-align: center;
-  box-shadow: 0 3px 10px #adadad;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a    \2577 \a 90 \2502  >>>>>>> Stashed changes\a    \2502                         ^\a    \2575 \a   scss/utils/_variables.scss 90:24  @import\a   scss/main.scss 2:9                root stylesheet';
 }
-.button--explo {
-  width: 65%;
-  margin-top: 30px;
-}
-.button--commande {
-  width: 55%;
-}
-.button:hover {
-  background: linear-gradient(to top, #a16be0, #ff93e1);
-  box-shadow: 0 3px 10px #616161;
-}
-
-/* MEDIA QUERIES */
-@media (min-width: 600px) {
-  .button--explo {
-    max-width: 40%;
-  }
-  .button--commande {
-    max-width: 40%;
-  }
-}
-@media (min-width: 1100px) {
-  .button--explo {
-    max-width: 20%;
-  }
-}
-/* Icones téléchargés */
-.ico--local {
-  height: 17px;
-  margin-right: 20px;
-}
-.ico--fonction {
-  width: 20px;
-  height: 24px;
-  filter: invert(54%) sepia(4%) saturate(31%) hue-rotate(336deg) brightness(90%) contrast(91%);
-}
-.ico--footer {
-  filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
-  margin-right: 10px;
-}
-.ico--footer--1 {
-  width: 10px;
-}
-.ico--footer--2 {
-  width: 13px;
-}
-
-/* Icones en ligne Font Awesome */
-/* PAGE ACCUEIL */
-.fa-heart {
-  font-size: 25px;
-  position: absolute;
-  top: 45px;
-  right: 40px;
-  height: 25px;
-  background: transparent;
-}
-.fa-heart:hover + .fa-heart--full {
-  opacity: 1;
-}
-
-.fa-heart--full {
-  font-size: 25px;
-  position: absolute;
-  top: 45px;
-  right: 40px;
-  height: 25px;
-  color: #9356DC;
-  opacity: 0;
-  transition: opacity 300ms ease-in-out;
-}
-
-/* PAGE LAPALETTEDUGOUT */
-.fa-arrow-left {
-  font-size: 20px;
-}
-
-.fa-check {
-  color: #99E2D0;
-}
-
-.header {
-  height: 68px;
-  padding-top: 25px;
-  padding-bottom: 10px;
-  text-align: center;
-  z-index: 2;
-  background: white;
-}
-.header__logo__a {
-  position: relative;
-}
-.header__logo__img {
-  max-width: 45%;
-}
-.header__arrow {
-  position: absolute;
-  left: 20px;
-  top: 27px;
-}
-
-.local {
-  position: absolute;
-  left: 0;
-  top: 42px;
-  display: flex;
-  align-items: baseline;
-  z-index: 1;
-}
-
-@media (min-width: 600px) {
-  .header {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-}
-/* SECTION EXPLO */
-.background {
-  height: 50px;
-  position: relative;
-  background-color: #e9e8e8;
-}
-.background::before {
-  content: " ";
-  height: 4px;
-  width: 100%;
-  position: absolute;
-  top: -4px;
-  left: 0;
-  opacity: 0.3;
-  box-shadow: 0px 3px 3px #858585;
-}
-
-.explo {
-  padding: 40px 20px 50px 20px;
-  background-color: whitesmoke;
-}
-
-/* SECTION FONCTION */
-.fonction {
-  padding: 40px 20px 50px 30px;
-}
-.fonction__li {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding-left: 40px;
-  height: 70px;
-  margin-bottom: 15px;
-  background-color: whitesmoke;
-  border-radius: 20px;
-}
-.fonction__li:hover {
-  background-color: #f2eafb;
-}
-.fonction__li:hover .ico--fonction {
-  filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
-}
-.fonction__li__num {
-  width: 24px;
-  height: 24px;
-  top: 22px;
-  left: -12px;
-  position: absolute;
-  border-radius: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #9356DC;
-  color: white;
-  font-size: 14px;
-}
-.fonction__li__div {
-  width: 40px;
-  display: flex;
-  align-items: center;
-}
-
-/* SECTION RESTO */
-.resto {
-  padding: 40px 20px 50px 20px;
-  background-color: whitesmoke;
-}
-.resto__li {
-  margin-bottom: 20px;
-}
-.resto__a__top {
-  height: 170px;
-  border-radius: 15px 15px 0 0;
-  box-shadow: 0 3px 10px #adadad;
-}
-.resto__a__top__1 {
-  position: relative;
-  background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
-  background-size: cover;
-  background-position: bottom center;
-}
-.resto__a__top__2 {
-  position: relative;
-  background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
-  background-size: cover;
-  background-position: center -145px;
-}
-.resto__a__top__3 {
-  background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;
-  background-size: cover;
-  background-position: center -50px;
-}
-.resto__a__top__4 {
-  background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
-  background-size: cover;
-  background-position: center -55px;
-}
-.resto__a__bottom {
-  height: 80px;
-  position: relative;
-  background: white;
-  border-radius: 0 0 15px 15px;
-  box-shadow: 0 3px 10px #adadad;
-  padding: 15px 20px 15px 10px;
-}
-.resto__a__divico {
-  position: absolute;
-  right: 25px;
-  top: 20px;
-}
-
-.nouveau {
-  width: 80px;
-  height: 29px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  right: 15px;
-  top: 13px;
-  background-color: #99E2D0;
-  border-radius: 2px;
-  box-shadow: 0 3px 10px #adadad;
-}
-
-/* MEDIA QUERIES */
-@media (min-width: 600px) {
-  .background {
-    margin-top: 68px;
-  }
-
-  .fonction, .heading--h2--resto, .resto__ul {
-    max-width: 60%;
-    margin: auto;
-  }
-
-  .heading--h2--resto {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 1100px) {
-  .fonction, .heading--h2--resto, .resto__ul {
-    max-width: 40%;
-    margin: auto;
-  }
-
-  .resto__a__top {
-    height: 250px;
-  }
-
-  .heading--h2--resto {
-    margin-bottom: 20px;
-  }
-}
-/* SECTION PLATPHOTO  */
-.platphoto {
-  margin-bottom: -60px;
-  max-height: 350px;
-}
-.platphoto__img {
-  width: 120%;
-  height: auto;
-}
-.platphoto__img--note {
-  object-fit: contain;
-}
-
-@media (min-width: 600px) {
-  .platphoto {
-    max-height: 500px;
-  }
-  .platphoto__img {
-    max-width: 100%;
-  }
-}
-/* SECTION COMMANDE */
-.carte {
-  margin-bottom: 40px;
-}
-
-.commande {
-  padding: 40px 20px 50px 20px;
-  background-color: whitesmoke;
-  position: relative;
-  border-radius: 40px 40px 0 0;
-}
-.commande__divico {
-  position: absolute;
-  top: 45px;
-  right: 40px;
-  height: 25px;
-}
-.commande__divico__ico {
-  height: 25px;
-}
-.commande__bordure {
-  width: 50%;
-  background: linear-gradient(to right, #99E2D0, #99E2D0) no-repeat;
-  background-size: 27% 3px;
-  background-position: bottom left;
-  margin-bottom: 25px;
-  padding-bottom: 10px;
-}
-.commande__li {
-  position: relative;
-  margin-bottom: 15px;
-  padding: 15px 0px 15px 10px;
-  border-radius: 15px;
-  box-shadow: 0 3px 10px #adadad;
-  background-color: white;
-}
-.commande__li__detail {
-  width: 75%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.commande__li__center {
-  position: absolute;
-  top: 38px;
-  right: 0px;
-  padding-right: 30px;
-  background-color: white;
-  transform: translateX(0px);
-  transition: transform 200ms ease-out;
-}
-.commande__li__center__price {
-  width: 25%;
-  padding-top: 2px;
-  background-color: white;
-}
-.commande__li__center__price__provence {
-  padding-top: 20px;
-}
-.commande__li__right {
-  height: 100%;
-  width: 17%;
-  position: absolute;
-  top: 0;
-  right: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #99E2D0;
-  border-radius: 0 15px 15px 0;
-  opacity: 0;
-  transform: translateX(60px);
-  transition: transform 200ms ease-out, opacity 300ms ease-out;
-}
-.commande__li__right__cont {
-  width: 25px;
-  height: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  background-color: white;
-}
-.commande__li:hover {
-  cursor: pointer;
-}
-.commande__li:hover .commande__li__center {
-  display: flex;
-  transform: translateX(-60px);
-}
-.commande__li:hover .commande__li__detail {
-  width: 61%;
-}
-.commande__li:hover .commande__li__right {
-  transform: translateX(0px);
-  opacity: 1;
-}
-
-/* MEDIA QUERIES */
-@media (min-width: 600px) {
-  .heading--h1--commande {
-    display: inline-block;
-    margin-right: 20px;
-    margin-left: 20%;
-  }
-
-  .commande__divico {
-    position: initial;
-    display: inline-block;
-  }
-
-  .carte {
-    max-width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media (min-width: 1100px) {
-  .carte {
-    max-width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .heading--h1--commande {
-    margin-left: 30%;
-  }
-}
-.footer {
-  padding: 25px 20px;
-  background-color: #353535;
-}
-.footer__logo {
-  height: 17px;
-  filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
-}
-.footer__nav {
-  margin-top: 13px;
-}
-.footer__li {
-  display: flex;
-  margin-bottom: 5px;
-}
-.footer__li__a {
-  color: white;
-}
-
-/* MEDIA QUERIES */
-@media (min-width: 600px) {
-  .footer__logo, .footer__nav {
-    max-width: 60%;
-    margin-left: 20%;
-  }
-}
-@media (min-width: 1100px) {
-  .footer__logo, .footer__nav {
-    max-width: 50%;
-    margin-left: 30%;
-  }
-}
-
-/*# sourceMappingURL=main.css.map */
