--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -35,16 +35,19 @@
     background-color: $background;
     position: relative;
     border-radius: 40px 40px 0 0;
+
     &__divico
     {
         position: absolute;
         top: 45px;
         right: 40px;
-        height: 25px;
-        &__ico
+        &:hover > .heart-index-full
         {
-            height: 25px;
-
+            opacity: 1;
+        }
+        &:hover > .heart-index
+        {
+            opacity: 0;
         }
     }
     &__bordure{
@@ -54,8 +57,6 @@
         background-position: bottom left;
         margin-bottom: 25px;
         padding-bottom: 10px;
-
-
     }
     &__li
     {
