--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,31 @@ body {
     left: 0;
   }
 }
+/* SECTION LOADER */
+.loader {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  animation: loader-page 3000ms forwards;
+  z-index: 3;
+}
+.loader__progress {
+  width: 80%;
+  height: 30px;
+  margin: auto;
+  margin-top: 230px;
+  border: 1px solid #9356DC;
+  animation: loader-progress 2550ms 250ms both;
+}
+.loader__progress__barre {
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to right, #9356DC, #FF79DA);
+  transform-origin: 0% 50%;
+  animation: loader-barre 2550ms 250ms forwards;
+}
+
 /* SECTION EXPLO */
 .background {
   height: 50px;
