--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     padding: 25px 20px;
     background-color: rgb(53, 53, 53);
+    animation: $animation;
     &__logo{
         height: 17px;
         filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
