--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -5,6 +5,7 @@
     text-align: center;
     z-index: 2;
     background: white;
+    animation: $animation;
     &__logo{
             &__a{
                 position: relative;
@@ -27,8 +28,7 @@
     top: 42px;
     display: flex;
     align-items: baseline;
-    z-index: 1;
-    
+    z-index: 2;
 }
 
 @media (min-width: 600px)
