--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -11,12 +11,14 @@ $background-button: linear-gradient(to top, $primary-color, $secondary-color);
 $background-button-hover: linear-gradient(to top, lighten($primary-color, 5%), lighten($secondary-color, 5%));
 $padding-section: 40px 20px 50px 20px;
 $box-shadow : 0 3px 10px $backgrey;
+$animation: page-on 2550ms 300ms both;
 
-
+/* KEYFRAMES */
 @keyframes loader-page
 {
     0%{
         opacity: 1;
+        transform: scale(1);
     }
     25%
     {
@@ -27,8 +29,13 @@ $box-shadow : 0 3px 10px $backgrey;
         opacity: 1;
         animation-timing-function: ease-in-out;
     }
+    99%
+    {
+        transform: scale(1);
+    }
     100%{
         opacity: 0;
+        transform: scale(0);
     }
 
 }
@@ -37,6 +44,10 @@ $box-shadow : 0 3px 10px $backgrey;
 {
     0%{
         opacity: 0;
+    }
+    3%
+    {
+        opacity: 1;
     }
     25%
     {
@@ -60,6 +71,10 @@ $box-shadow : 0 3px 10px $backgrey;
 @keyframes loader-barre
 {
     0%
+    {
+        transform: scaleX(0);
+    }
+    3%
     {
         transform: scaleX(0);
         animation-timing-function: ease-out;
@@ -86,3 +101,21 @@ $box-shadow : 0 3px 10px $backgrey;
     }
 
 }
+
+@keyframes page-on
+{
+    0%
+    {
+        opacity: 0;
+    }
+    80%
+    {
+        opacity: 0;
+    }
+    100%
+    {
+        opacity: 1;
+    }
+}
+
+/* ANIMATION */ 
