--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ body {
 }
 
 .text--local {
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 400;
 }
 .text--search {
@@ -423,10 +423,10 @@ body {
   background-color: whitesmoke;
   border-radius: 20px;
 }
-.fonction__li:hover {
+cursor .fonction__li:hover {
   background-color: #f2eafb;
 }
-.fonction__li:hover .ico--fonction {
+cursor .fonction__li:hover .ico--fonction {
   filter: invert(43%) sepia(66%) saturate(4357%) hue-rotate(245deg) brightness(93%) contrast(85%);
 }
 .fonction__li__num {
@@ -465,23 +465,23 @@ body {
 }
 .resto__a__top__1 {
   position: relative;
-  background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: bottom center;
 }
 .resto__a__top__2 {
   position: relative;
-  background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center -145px;
 }
 .resto__a__top__3 {
-  background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center -50px;
 }
 .resto__a__top__4 {
-  background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
+  background: url(images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center -55px;
 }
@@ -503,6 +503,9 @@ body {
 }
 .resto__a__bottom__heart:hover > .heart-index {
   opacity: 0;
+}
+.resto__a:hover > :nth-child(1) {
+  opacity: 90%;
 }
 
 .nouveau {
