--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -76,7 +76,7 @@
         margin-bottom: 15px;
         background-color: $background;
         border-radius: 20px;
-        cursor
+        cursor: pointer;
         &:hover
             {
                 background-color: lighten($primary-color, 35%);
@@ -127,23 +127,23 @@
             box-shadow: $box-shadow; 
             &__1{
                 position: relative;
-                background: url(images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;  
+                background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;  
                 background-size: cover;
                 background-position: bottom center;
             }
             &__2{
                 position: relative;
-                background: url(images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;  
+                background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;  
                 background-size: cover;
                 background-position: center -145px;
             }
             &__3{
-                background: url(images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;  
+                background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) no-repeat;  
                 background-size: cover;
                 background-position: center -50px;
             }
             &__4{
-                background: url(images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;  
+                background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;  
                 background-size: cover;
                 background-position: center -55px;
             }
