--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -41,11 +41,11 @@
         position: absolute;
         top: 45px;
         right: 40px;
-        &:hover > .heart-index-full
+        &:hover > .heart--full
         {
             opacity: 1;
         }
-        &:hover > .heart-index
+        &:hover > .heart--wide
         {
             opacity: 0;
         }
