--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./base/base";
 @import "./components/buttons";
 @import "./components/icons";
+@import "./components/coeurs";
 @import "./layouts/header";
 @import "./pages/index";
 @import "./layouts/page_menu";
