--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
   0% {
     opacity: 1;
     transform: scale(1);
+    z-index: 3;
   }
   25% {
     opacity: 1;
@@ -16,10 +17,12 @@
   }
   99% {
     transform: scale(1);
+    z-index: 3;
   }
   100% {
     opacity: 0;
     transform: scale(0);
+    z-index: -1;
   }
 }
 @keyframes loader-progress {
@@ -67,18 +70,6 @@
     transform: scaleX(1);
   }
 }
-@keyframes page-on {
-  0% {
-    opacity: 0;
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-/* ANIMATION */
 /* POLICES */
 /* shrikhand-regular - latin */
 @font-face {
@@ -154,6 +145,8 @@ body {
   font-family: "roboto", Arial, Helvetica, sans-serif;
 }
 .heading--h1--commande {
+  display: inline-block;
+  margin-right: 20px;
   margin-bottom: 30px;
   font-size: 26px;
 }
@@ -224,6 +217,21 @@ body {
   font-weight: 300;
 }
 
+@media (min-width: 600px) {
+  .heading--h1--commande {
+    margin-left: 20%;
+  }
+
+  .heading--h2--resto {
+    width: 80%;
+    margin-left: 10%;
+  }
+}
+@media (min-width: 1000px) {
+  .heading--h1--commande {
+    margin-left: 30%;
+  }
+}
 .button {
   display: block;
   margin: auto;
@@ -253,11 +261,15 @@ body {
     max-width: 40%;
   }
   .button--commande {
-    max-width: 40%;
+    max-width: 30%;
+    margin-top: 50px;
   }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   .button--explo {
+    max-width: 20%;
+  }
+  .button--commande {
     max-width: 20%;
   }
 }
@@ -322,9 +334,7 @@ body {
   padding-top: 25px;
   padding-bottom: 10px;
   text-align: center;
-  z-index: 2;
   background: white;
-  animation: page-on 2550ms 300ms both;
 }
 .header__logo__a {
   position: relative;
@@ -348,25 +358,25 @@ body {
 }
 
 @media (min-width: 600px) {
-  .header {
-    width: 100%;
+  .header__arrow {
     position: absolute;
-    top: 0;
-    left: 0;
+    left: 50px;
   }
 }
 /* SECTION LOADER */
 .loader {
-  position: absolute;
   width: 100%;
   height: 100vh;
-  margin-top: 35%;
+  position: absolute;
+  top: 0;
+  left: 0;
   background-color: white;
   animation: loader-page 3000ms forwards;
 }
 .loader__logo {
   display: flex;
   justify-content: center;
+  margin-top: 300px;
   margin-bottom: 40px;
   animation: loader-progress 2250ms 250ms both;
 }
@@ -390,8 +400,6 @@ body {
   height: 50px;
   position: relative;
   background-color: #e9e8e8;
-  animation: page-on 2550ms 300ms both;
-  z-index: -1;
 }
 .background::before {
   content: " ";
@@ -407,13 +415,11 @@ body {
 .explo {
   padding: 40px 20px 50px 20px;
   background-color: whitesmoke;
-  animation: page-on 2550ms 300ms both;
 }
 
 /* SECTION FONCTION */
 .fonction {
   padding: 40px 20px 50px 30px;
-  animation: page-on 2550ms 300ms both;
 }
 .fonction__li {
   position: relative;
@@ -456,7 +462,6 @@ body {
 .resto {
   padding: 40px 20px 50px 20px;
   background-color: whitesmoke;
-  animation: page-on 2550ms 300ms both;
 }
 .resto__li {
   margin-bottom: 20px;
@@ -497,6 +502,8 @@ body {
   padding: 15px 20px 15px 10px;
 }
 .resto__a__bottom__heart {
+  width: 25px;
+  height: 22px;
   position: absolute;
   right: 25px;
   top: 20px;
@@ -526,32 +533,33 @@ body {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 600px) {
-  .background {
-    margin-top: 68px;
+@media (max-width: 350px) {
+  .a--explo {
+    font-size: 14px;
   }
-
-  .fonction, .heading--h2--resto, .resto__ul {
+}
+@media (min-width: 600px) {
+  .fonction {
     max-width: 60%;
     margin: auto;
   }
 
-  .heading--h2--resto {
-    margin-bottom: 20px;
+  .resto__ul {
+    max-width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
   }
 }
-@media (min-width: 1100px) {
-  .fonction, .heading--h2--resto, .resto__ul {
+@media (min-width: 1000px) {
+  .fonction {
     max-width: 40%;
     margin: auto;
   }
 
   .resto__a__top {
     height: 250px;
-  }
-
-  .heading--h2--resto {
-    margin-bottom: 20px;
   }
 }
 /* SECTION PLATPHOTO  */
@@ -567,14 +575,6 @@ body {
   object-fit: contain;
 }
 
-@media (min-width: 600px) {
-  .platphoto {
-    max-height: 500px;
-  }
-  .platphoto__img {
-    max-width: 100%;
-  }
-}
 /* SECTION COMMANDE */
 .carte {
   margin-bottom: 40px;
@@ -587,9 +587,10 @@ body {
   border-radius: 40px 40px 0 0;
 }
 .commande__divico {
-  position: absolute;
-  top: 45px;
-  right: 40px;
+  display: inline-block;
+  width: 25px;
+  height: 22px;
+  position: relative;
 }
 .commande__divico:hover > .heart--full {
   opacity: 1;
@@ -638,7 +639,7 @@ body {
 }
 .commande__li__right {
   height: 100%;
-  width: 17%;
+  width: 60px;
   position: absolute;
   top: 0;
   right: 0px;
@@ -649,7 +650,7 @@ body {
   border-radius: 0 15px 15px 0;
   opacity: 0;
   transform: translateX(60px);
-  transition: transform 200ms ease-out, opacity 300ms ease-out;
+  transition: transform 200ms ease-out, opacity 10ms ease-out;
 }
 .commande__li__right__cont {
   width: 25px;
@@ -677,38 +678,26 @@ body {
 
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
-  .heading--h1--commande {
-    display: inline-block;
-    margin-right: 20px;
-    margin-left: 20%;
+  .platphoto {
+    max-height: 500px;
   }
-
-  .commande__divico {
-    position: initial;
-    display: inline-block;
+  .platphoto__img {
+    max-width: 100%;
   }
 
   .carte {
-    max-width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 80%;
+    margin: auto;
   }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1000px) {
   .carte {
     max-width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .heading--h1--commande {
-    margin-left: 30%;
   }
 }
 .footer {
   padding: 25px 20px;
   background-color: #353535;
-  animation: page-on 2550ms 300ms both;
 }
 .footer__logo {
   height: 17px;
@@ -728,14 +717,14 @@ body {
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
   .footer__logo, .footer__nav {
-    max-width: 60%;
-    margin-left: 20%;
+    max-width: 80%;
+    margin-left: 10%;
   }
 }
 @media (min-width: 1100px) {
   .footer__logo, .footer__nav {
-    max-width: 50%;
-    margin-left: 30%;
+    max-width: 80%;
+    margin-left: 10%;
   }
 }
 
