--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -96,6 +96,8 @@ body{
         font-family: "roboto", Arial, Helvetica, sans-serif;
         }
         &--commande{
+            display: inline-block;  
+            margin-right: 20px;
             margin-bottom: 30px;
             font-size: 26px;
         }
@@ -173,4 +175,25 @@ body{
         font-weight: 300;
     }
     
+}
+
+@media (min-width: 600px) 
+{
+    .heading--h1--commande
+        {
+        margin-left: 20%;
+        }
+    .heading--h2--resto
+    {
+        width: 80%;
+        margin-left: 10%;
+    }
+}
+
+@media (min-width: 1000px)
+{
+    .heading--h1--commande
+    {
+        margin-left: 30%;
+    }
 }
