--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,9 +3,7 @@
     padding-top: 25px;
     padding-bottom: 10px;
     text-align: center;
-    z-index: 2;
     background: white;
-    animation: $animation;
     &__logo{
             &__a{
                 position: relative;
@@ -35,9 +33,9 @@
 {
     .header
     {
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+        &__arrow{
+            position: absolute;
+            left: 50px;
+            }
     }
 }
