--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -12,18 +12,6 @@
     }
 }
 
-@media (min-width: 600px)
-{
-    .platphoto
-    {
-        max-height: 500px;
-        &__img
-        {
-            max-width: 100%;
-        }
-    }
-}
-
 /* SECTION COMMANDE */
 .carte{
     margin-bottom: 40px;
@@ -36,11 +24,12 @@
     position: relative;
     border-radius: 40px 40px 0 0;
 
-    &__divico
+    &__divico /* La div est de même taille que les deux svg coeurs qu'elle contient en absolute */
     {
-        position: absolute;
-        top: 45px;
-        right: 40px;
+        display: inline-block;
+        width: 25px;
+        height: 22px;
+        position: relative;
         &:hover > .heart--full
         {
             opacity: 1;
@@ -93,7 +82,7 @@
         &__right
         {
             height: 100%;
-            width: 17%;
+            width: 60px;
             position: absolute;
             top: 0;
             right: 0px;
@@ -104,7 +93,7 @@
             border-radius: 0 15px 15px 0;
             opacity: 0;
             transform: translateX(60px);
-            transition: transform 200ms ease-out, opacity 300ms ease-out;
+            transition: transform 200ms ease-out, opacity 10ms ease-out;
             &__cont
             {
                 width: 25px;
@@ -140,35 +129,27 @@
 /* MEDIA QUERIES */
 @media (min-width: 600px)
 {
-    .heading--h1--commande
+    .platphoto
     {
-        display: inline-block;  
-        margin-right: 20px;
-        margin-left: 20%;
-    }
-    .commande__divico
-    {
-        position: initial;
-        display: inline-block;
+        max-height: 500px;
+        &__img
+        {
+            max-width: 100%;
+        }
     }
     .carte
     {
-        max-width: 60%;
-        margin-left: auto;
-        margin-right: auto;
+        max-width: 80%;
+        margin: auto;
     }
 }
 
-@media (min-width: 1100px)
+@media (min-width: 1000px)
 {
     .carte
     {
         max-width: 40%;
-        margin-left: auto;
-        margin-right: auto;
     }
-    .heading--h1--commande
-    {
-        margin-left: 30%;
-    }
+    
+
 }
