--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -19,6 +19,7 @@ $animation: page-on 2550ms 300ms both;
     0%{
         opacity: 1;
         transform: scale(1);
+        z-index: 3;
     }
     25%
     {
@@ -32,10 +33,12 @@ $animation: page-on 2550ms 300ms both;
     99%
     {
         transform: scale(1);
+        z-index: 3;
     }
     100%{
         opacity: 0;
         transform: scale(0);
+        z-index: -1
     }
 
 }
@@ -101,21 +104,3 @@ $animation: page-on 2550ms 300ms both;
     }
 
 }
-
-@keyframes page-on
-{
-    0%
-    {
-        opacity: 0;
-    }
-    80%
-    {
-        opacity: 0;
-    }
-    100%
-    {
-        opacity: 1;
-    }
-}
-
-/* ANIMATION */ 
