--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -8,8 +8,8 @@
     }
     &--fonction
     {
-        width: 20px;
-        height: 24px;
+        width: 18px;
+        height: 22px;
         filter: invert(54%) sepia(4%) saturate(31%) hue-rotate(336deg) brightness(90%) contrast(91%);
     }
     &--footer
@@ -32,12 +32,12 @@
 
     /* PAGE ACCUEIL */
 .fa-heart{
-    font-size: 25px; 
+    font-size: 1.5rem; 
 }
 
     /* PAGE LAPALETTEDUGOUT */
 .fa-arrow-left{
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 .fa-check{
