--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,7 @@
   }
   25% {
     transform: scaleX(0.2);
-    animation-timing-function: ease-in-out;
-    animation-timing-function: normal;
+    animation-timing-function: ease-in;
   }
   50% {
     transform: scaleX(0.4);
@@ -130,6 +129,7 @@
 }
 
 body {
+  font-size: 16px;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   color: black;
 }
@@ -137,7 +137,7 @@ body {
 /* TITRES ET TEXTES */
 .heading--h1 {
   font-family: "Shrikhand", Arial, Helvetica, sans-serif;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 .heading--h1--explo {
   text-align: center;
@@ -146,9 +146,9 @@ body {
 }
 .heading--h1--commande {
   display: inline-block;
-  margin-right: 20px;
+  margin-right: 25px;
   margin-bottom: 30px;
-  font-size: 26px;
+  font-size: 1.6rem;
 }
 .heading--h2--fonction {
   margin-bottom: 25px;
@@ -157,44 +157,55 @@ body {
   margin-bottom: 20px;
 }
 .heading--h2--entree {
-  font-size: 17px;
+  font-size: 1rem;
   text-transform: uppercase;
   font-weight: 300;
 }
 .heading--h3 {
   margin-bottom: 6px;
+  font-weight: 600;
+}
+.heading--h3--resto {
+  font-size: 1.1rem;
 }
 .heading--h3--commande {
-  font-size: 17px;
-  font-weight: 600;
+  font-size: 1.1rem;
+  font-weight: 500;
 }
 
 .text--local {
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 400;
 }
 .text--search {
   text-align: center;
   margin-bottom: 15px;
-  font-size: 18px;
+  font-size: 1.2rem;
   font-weight: 200;
 }
+.text--fonction {
+  font-size: 0.9rem;
+}
 .text--resto {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   font-weight: 300;
 }
 .text--nouveau {
   font-weight: 500;
   color: #278870;
-  font-size: 0.85em;
+  font-size: 0.85rem;
 }
 .text--commande {
-  font-size: 14px;
+  font-size: 0.85rem;
   font-weight: 300;
 }
 .text--commande--bold {
-  font-size: 15px;
   font-weight: 500;
+}
+.text--footer {
+  font-family: "Shrikhand", "arial", "sans-serif";
+  color: white;
+  font-size: 1.1rem;
 }
 
 /* LISTES */
@@ -209,14 +220,15 @@ body {
 .a--fonction {
   font-weight: 500;
 }
-.a--explo {
-  color: white;
-  font-weight: 400;
-}
 .a--footer {
   font-weight: 300;
 }
 
+@media (max-width: 350px) {
+  .text--button {
+    font-size: 0.85rem;
+  }
+}
 @media (min-width: 600px) {
   .heading--h1--commande {
     margin-left: 10%;
@@ -226,10 +238,27 @@ body {
     width: 80%;
     margin-left: 10%;
   }
+
+  .text--footer {
+    max-width: 80%;
+    margin-left: 10%;
+    font-size: 1.6rem;
+  }
+}
+@media (min-width: 700px) {
+  body {
+    font-size: 17px;
+  }
 }
 @media (min-width: 1000px) {
   .heading--h1--commande {
     margin-left: 30%;
+  }
+
+  .text--footer {
+    max-width: 25%;
+    margin: auto;
+    text-align: center;
   }
 }
 .button {
@@ -246,6 +275,7 @@ body {
 .button--explo {
   width: 65%;
   margin-top: 30px;
+  font-weight: 400;
 }
 .button--commande {
   width: 55%;
@@ -279,8 +309,8 @@ body {
   margin-right: 20px;
 }
 .ico--fonction {
-  width: 20px;
-  height: 24px;
+  width: 18px;
+  height: 22px;
   filter: invert(54%) sepia(4%) saturate(31%) hue-rotate(336deg) brightness(90%) contrast(91%);
 }
 .ico--footer {
@@ -297,12 +327,12 @@ body {
 /* Icones en ligne Font Awesome */
 /* PAGE ACCUEIL */
 .fa-heart {
-  font-size: 25px;
+  font-size: 1.5rem;
 }
 
 /* PAGE LAPALETTEDUGOUT */
 .fa-arrow-left {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .fa-check {
@@ -431,7 +461,6 @@ body {
   margin-bottom: 15px;
   background-color: whitesmoke;
   border-radius: 20px;
-  cursor: pointer;
 }
 .fonction__li:hover {
   background-color: #f2eafb;
@@ -451,7 +480,6 @@ body {
   align-items: center;
   background-color: #9356DC;
   color: white;
-  font-size: 14px;
 }
 .fonction__li__div {
   width: 40px;
@@ -534,11 +562,6 @@ body {
 }
 
 /* MEDIA QUERIES */
-@media (max-width: 350px) {
-  .a--explo {
-    font-size: 14px;
-  }
-}
 @media (min-width: 600px) {
   .fonction {
     max-width: 60%;
@@ -611,7 +634,7 @@ body {
 .commande__li {
   position: relative;
   margin-bottom: 15px;
-  padding: 15px 0px 15px 10px;
+  padding: 10px 0px 10px 10px;
   border-radius: 15px;
   box-shadow: 0 3px 10px #adadad;
   background-color: white;
@@ -652,7 +675,7 @@ body {
   border-radius: 0 15px 15px 0;
   opacity: 0;
   transform: translateX(60px);
-  transition: transform 200ms ease-out, opacity 10ms ease-out;
+  transition: transform 400ms ease-out;
 }
 .commande__li__right__cont {
   width: 25px;
@@ -662,6 +685,8 @@ body {
   align-items: center;
   border-radius: 50px;
   background-color: white;
+  transform: rotate(-360deg);
+  transition: transform 400ms ease-out;
 }
 .commande__li:hover {
   cursor: pointer;
@@ -676,6 +701,9 @@ body {
 .commande__li:hover .commande__li__right {
   transform: translateX(0px);
   opacity: 1;
+}
+.commande__li:hover .commande__li__right__cont {
+  transform: rotate(0);
 }
 
 /* MEDIA QUERIES */
@@ -729,15 +757,19 @@ body {
 
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
-  .footer__logo, .footer__nav {
+  .footer__nav {
     max-width: 80%;
     margin-left: 10%;
   }
 }
-@media (min-width: 1100px) {
-  .footer__logo, .footer__nav {
-    max-width: 80%;
-    margin-left: 10%;
+@media (min-width: 1000px) {
+  .footer__nav {
+    max-width: 25%;
+    margin: auto;
+  }
+
+  .footer__li {
+    justify-content: center;
   }
 }
 
