--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -54,7 +54,7 @@
     {
         position: relative;
         margin-bottom: 15px;
-        padding: 15px 0px 15px 10px;
+        padding: 10px 0px 10px 10px;
         border-radius: 15px;
         box-shadow: $box-shadow;
         background-color: white;
@@ -96,7 +96,7 @@
             border-radius: 0 15px 15px 0;
             opacity: 0;
             transform: translateX(60px);
-            transition: transform 200ms ease-out, opacity 10ms ease-out;
+            transition: transform 400ms ease-out;
             &__cont
             {
                 width: 25px;
@@ -106,6 +106,8 @@
                 align-items: center;
                 border-radius: 50px;
                 background-color: white;
+                transform: rotate(-360deg);
+                transition: transform 400ms ease-out;
             }
         }
         &:hover
@@ -125,6 +127,10 @@
         {
             transform: translateX(0px);
             opacity: 1;
+        }
+        &:hover .commande__li__right__cont
+        {
+            transform: rotate(0);
         }
     }
 }
