--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,28 @@
     transform: scaleX(1);
   }
 }
+@keyframes carte-opacity {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes plat-anim {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+    box-shadow: 0 0px 0px #adadad;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+    box-shadow: 0 3px 10px #adadad;
+  }
+}
 /* POLICES */
 /* shrikhand-regular - latin */
 @font-face {
@@ -132,6 +154,8 @@ body {
   font-size: 16px;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   color: black;
+  width: 100%;
+  /* résout un problème de largeur d'écran à - de 100% pour mobile et tablette sur Chrome */
 }
 
 /* TITRES ET TEXTES */
@@ -604,6 +628,15 @@ body {
 .carte {
   margin-bottom: 40px;
 }
+.carte--entrees {
+  animation: carte-opacity 300ms both;
+}
+.carte--plats {
+  animation: carte-opacity 300ms 800ms both;
+}
+.carte--desserts {
+  animation: carte-opacity 300ms 1900ms both;
+}
 
 .commande {
   padding: 40px 20px 50px 20px;
@@ -638,6 +671,15 @@ body {
   border-radius: 15px;
   box-shadow: 0 3px 10px #adadad;
   background-color: white;
+}
+.commande__li--entrees {
+  animation: plat-anim 800ms 300ms both;
+}
+.commande__li--plats {
+  animation: plat-anim 800ms 1100ms both;
+}
+.commande__li--desserts {
+  animation: plat-anim 800ms 2200ms both;
 }
 .commande__li__detail {
   width: 75%;
@@ -708,11 +750,9 @@ body {
 
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
-  .platphoto {
-    max-height: 500px;
-  }
   .platphoto__img {
-    max-width: 100%;
+    width: 100%;
+    height: 450px;
   }
 
   .carte {
@@ -722,13 +762,12 @@ body {
 }
 @media (min-width: 1000px) {
   .platphoto {
-    margin-bottom: -60px;
-    margin-top: 100px;
+    margin: auto;
     max-height: 550px;
   }
   .platphoto__img {
     width: 100%;
-    height: auto;
+    height: 600px;
     margin-top: -100px;
   }
 
