--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -17,8 +17,21 @@
 }
 
 /* SECTION COMMANDE */
-.carte{
+.carte
+{
     margin-bottom: 40px;
+        &--entrees
+        {
+            animation: carte-opacity 300ms both;
+        }
+        &--plats
+        {
+            animation: $carte-opacity-plats;
+        }
+        &--desserts
+        {
+            animation: $carte-opacity-desserts;
+        }
 }
 
 .commande
@@ -50,6 +63,7 @@
         margin-bottom: 25px;
         padding-bottom: 10px;
     }
+
     &__li
     {
         position: relative;
@@ -58,6 +72,18 @@
         border-radius: 15px;
         box-shadow: $box-shadow;
         background-color: white;
+        &--entrees
+        {
+            animation: $plat-anim-entrees;
+        }
+        &--plats
+        {
+            animation: $plat-anim-plats;
+        }
+        &--desserts
+        {
+            animation: $plat-anim-desserts;
+        }
         &__detail{
             width: 75%;
             white-space : nowrap; 
@@ -140,10 +166,10 @@
 {
     .platphoto
     {
-        max-height: 500px;
         &__img
         {
-            max-width: 100%;
+            width: 100%;
+            height: 450px;
         }
     }
     .carte
@@ -157,13 +183,12 @@
 {
     .platphoto
     {
-        margin-bottom: -60px;
-        margin-top: 100px;
+        margin: auto;
         max-height: 550px;
         &__img
         {   
         width: 100%;
-        height: auto;
+        height: 600px;
         margin-top: -100px;
         
         }
